syntax = "proto3";

option java_multiple_files = true;

option java_package = "billing";

service BillingService {
  rpc CreateBillingAccount (BillingRequest) returns (BillingResponse);
}

message BillingRequest {
  string patientId = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
}

message BillingResponse {
  string accountId = 1;
  string status = 2;
}